--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.15.2"
   },
   "devDependencies": {
+    "@testing-library/react": "^9.1.4",
     "nodemon": "^1.17.2"
   },
   "scripts": {
